--- a/lessons/Определение переменных и вызов функций.md
+++ b/lessons/Определение переменных и вызов функций.md
@@ -17,3 +17,18 @@ fn add(i: i32, j: i32) -> i32 {
 ```
 
 Определение функции начинается с ключевого слова `fn`. Точка входа в Rust-программы - это функция main. Она не получает никаких аргументов и не возвращает никаких значений.
+
+В следующих строках let используется для привязки переменной. По умолчанию переменные неизменяемые, то есть предназначены только для чтения, а не для чтения-записи.
+
+Также можно указывать конкретный тип данных разными способами:
+
+1. Через двоеточие
+2. Числовые литералы могут включать аннотации типов
+
+В последней строке вызывается макрос `println!` для вывода текста.
+
+В строках используются двойные, а не одинарные кавычки, а для символах используются одинарные.
+
+И наконец, функция add имеет аргументы с указанными типами данных и возвращает нужный тип данных. Как вы видите, возврат значения происходит автоматически, для этого не используются ключевые слова по типу `return`.
+
+Для обозначения переменных есть [[Типы данных]].
