--- a/lessons/Типы данных.md
+++ b/lessons/Типы данных.md
@@ -58,3 +58,59 @@ fn main() {
 | i8, i16, i32, i64<br> | Целые числа со знаком в диапазоне от 8 до 64 разрядов                                                                                                                    |
 | f32, f64              | Числа с плавающей точкой в 32-разрядном и 64-разрядном вариантах                                                                                                         |
 | isize, usize          | Целые числа, предполагающие "исходную" разрядность центрального процессора. Например, в 64-разрядных центральных процессорах `usize` и `isize` будут шириной 64-разряда. |
+ Целые числа со знаком (`i`) представляют собой как отрицательные, так и положительные целые числа.
+ Целые числа без знака (`u`) представляют собой только положительные целые числа, но могут быть вдвое шире обычных чисел.
+ Типы с плавающей точкой (`f`) представляют собой действительные числа со специальными комбинациями битов для представления значений бесконечности и "не числа".
+Ширина целочисленного значения - это количество битов, используемых типом в оперативной памяти или в центральном процессоре.
+
+### Невозможность проведения сравнения разных типов
+В Rust существуют требования к безопасности типов, которые не позволяют проводить сравнение между переменными разного типа.
+
+Чтобы компилятор смог сравнить, надо будет воспользоваться оператором `as` для приведения операнда одного типа к другому типу. Например:
+
+```rust
+// Код ниже не пройдет компиляцию
+fn main() {
+	let a: i32 = 10;
+	let b: u16 = 100;
+
+	if a < b {
+		println!("Ten is less than one hundred.")
+	}
+}
+
+// Код ниже пройдет компиляцию
+fn main() {
+	let a: i32 = 10;
+	let b: u16 = 100;
+
+	if a < (b as i32) {
+		println!("Ten is less than one hundred.")
+	}
+}
+```
+
+Безопаснее всего привести меньший тип к большему (например, 16-разрядный тип к 32-разрядному типу).
+
+Порой использование ключевого слова `as` накладывает слишком больше ограничения. Восстановить более полный контроль над приведением типов можно за счет ряда формальностей. Это выполняет модуль [[TryInto]]:
+
+```rust
+use std::convert::TryInto;
+
+fn main() {
+	let a: i32 = 10;
+	let b: u16 = 100;
+
+	let b_ = b.try_into().unwrap();
+
+	if a < b_ {
+		println!("Ten is less than one hundred");
+	}
+}
+```
+
+### Опасности чисел с плавающей точкой
+Типы чисел с плавающей точкой (например, `f32` и `f64`) по неосмотрительности могут возникать серьезные проблемы. Этому есть по крайней мере две причины:
+
+1. Зачастую они соответствуют представляемым числам только приблизительно. Типы с плавающей точкой реализованы числами по основанию 2, но вычисления довольно часто требуется проводить в числах по основанию 10. Это несоответствие создает неопределенность. И еще, хотя значения с плавающей точкой описываются как представляющие действительные числа, они имеют ограниченную точность. Для представления всех действительных чисел требуется бесконечная точность.
+2. Они могут представлять значения, семантика которых не воспринимается на интуитивном уровне. В отличии от целых чисел, типы с плавающей точкой имеют ряд значений, которые (конструктивно) плохо сочетаются 
