--- a/lessons/Типы данных.md
+++ b/lessons/Типы данных.md
@@ -113,4 +113,20 @@ fn main() {
 Типы чисел с плавающей точкой (например, `f32` и `f64`) по неосмотрительности могут возникать серьезные проблемы. Этому есть по крайней мере две причины:
 
 1. Зачастую они соответствуют представляемым числам только приблизительно. Типы с плавающей точкой реализованы числами по основанию 2, но вычисления довольно часто требуется проводить в числах по основанию 10. Это несоответствие создает неопределенность. И еще, хотя значения с плавающей точкой описываются как представляющие действительные числа, они имеют ограниченную точность. Для представления всех действительных чисел требуется бесконечная точность.
-2. Они могут представлять значения, семантика которых не воспринимается на интуитивном уровне. В отличии от целых чисел, типы с плавающей точкой имеют ряд значений, которые (конструктивно) плохо сочетаются 
+2. Они могут представлять значения, семантика которых не воспринимается на интуитивном уровне. В отличии от целых чисел, типы с плавающей точкой имеют ряд значений, которые (конструктивно) плохо сочетаются друг с другом. Формально у них только частичное отношение эквивалентности. Все это запрограммировано в системе типов Rust. Для типов `f32` и `f64` реализован только [[Типаж]] `std::cmp::PartialEq`, а для других числовых типов реализован также [[Типаж]] `std::cmp::Eq`.
+
+Для предотвращения опасностей нужно следовать двум рекомендациям:
+
+1. Избегать проверок чисел с плавающей точкой на равенство.
+2. Проявлять осторожность, когда результаты могут быть математически неопределенными.
+
+Использование равенства для сравнения чисел с плавающей точкой может быть весьма проблематичным. Числа с плавающей точкой реализованы компьютерными системами, использующие двоичную математику, но от них часто требуется выполнять операции над десятичными числами.
+
+### Рациональные, комплексные и другие
+Стандартная библиотека Rust сравнительно невелика по объему. В нее не включены числовые типы, которые часто доступны в других языках. К ним относятся:
+
+ + Многие математические объекты для работы с рациональными и комплексными числами.
+ + Целые числа произвольного размера и числа с плавающей точкой произвольной точности для работы с очень большими или маленькими числами.
+ + Десятичные числа с фиксированной точкой для работы с валютами.
+
+Для доступа к этим особым числовым типам можно воспользоваться [[Контейнер]]ами или крейтами.
